<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/ana_sayfa" />
        <item
            android:id="@+id/nav_haberler"
            android:icon="@drawable/ic_baseline_rss_feed_24"
            android:title="Haberler" />
        <item
            android:id="@+id/nav_editor"
            android:icon="@drawable/ic_baseline_stars_24"
            android:title="@string/editorunsecimi" />
        <item
            android:id="@+id/nav_ayarlar"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/ayarlar" />
    </group>
</menu>